frontend/src/app/app.component.scss
@import '../settings';

.main {
  height: 100%;
  width: 100%;
}

.footer {
  margin-top: 1em;
  margin-bottom: 3em;
  font-size: 14px;
  text-align: center;
  color: #a4a4a4;
  a {
    color: #a4a4a4;
    text-decoration: none;
  }
  a:hover {
    text-decoration: none;
    color: #000;
  }
}

.button:a {
  text-decoration: none;
}

.border {
  margin-left: 5%;
  margin-right: 5%;
  border: 3px solid #000;
}

.button {
  font-weight: bold;
}

.progress-full {
  background-color: #000;
}

.progress-empty {
  background-color: #a4a4a4;
}

.previously-uploaded {
  padding-top: 2em;
}

.sub-title {
  font-size: 19px;
  font-weight: bold;
}

.edit-titleimage {
  margin-bottom: 1.5em;
}

.back-forth {
  padding-top: 2em;
}

main.loading {
  display:none;
}

.colored {
  background-color: #EFEFEF;
}

.icons-steps {
  font-size: 90px;
  text-align: left;
  padding-left: 1.5em;
}

.collapsible {
  display: none;
}

#collapsible-trigger {
  height: 3em;
  &:hover {
    color: #8f8f8f;
    cursor: pointer;
  }
}

.show-help {
  display: block;
}
.remove-help {
  display: none;
}

.expanded-trigger {
  .show-help {
    display: none;
  }
  .remove-help {
    display: block;
  }
}

.help {
  display: none;
}
.expanded {
  .help {
    display: block;
  }
}

